Ajustando novos templates de pdf e melhorando formatação dos dados do cliente no pdf